2019. 6.18  Reflected new specification of zVecElem. [dz_pex]
2019. 6.18. Reflected new specification of zVecBuf and zMatBuf. [dz_sys_pex]
2019. 6.18. Reflected renaming from zVecClear to zVecZero. [dz_sys_lin, dz_pex]
2019. 6.13. Renamed *Read and *Write to *Scan and *Print, respectively. [dz_sys, dz_sys_gen, dz_sys_misc, dz_sys_lag, dz_sys_pid, dz_sys_filt_bw, dz_sys_filt_maf, dz_sys_pex, dz_sys_lin, dz_pex, dz_lin]
2019. 1.10. Added _dzLinCODet, dzLinCtrlDet and dzLinObsDet. [dz_lin]
2019. 1.10. Modified _dzLinCOMatPrep, dzLinCtrlMat and dzLinObsMat. [dz_lin]
2019. 1.10. Modified _dzLinIsCO. [dz_lin]
2019. 1.10. Reflected new specifications of zArray. [dz_sys]
2019. 1.10. Reflected changes of ZM. [dz_lin]
2018.12.12. Followed renaming of CURE to ZEDA. [all]
2018.11.16. Created automatic testing system. [test]
2015. 5. 4. Reflected modification of zOptionRead. [app]
2015. 3.27. Reimplemented dzSysConnect as a function. [dz_sys]
2015. 3.27. Modified dz*FRead. [dz_sys*, dz_lin, dz_pex]
2015. 2. 9. Applied cure-config-gen. [app]
2015. 1. 7. Added dzco-config. [app]
2013.12.11. Reimplemented applications. [app]
2013.12.11. Added function generators. [dz_sys_gen]
2013.12.11. Reimplemented dzSys class. [all]
2013.12. 2. Renamed from DZcon to DZco. [all]
2013.12. 2. Removed dz_fft (to ZM). [dz_fft]
2013.11.30. Added _dzLinCheckSize. [dz_lin]
2013.11.30. Added _dzLinAllocODE, _dzLinDestroyODE, _dzLinDestroy and dzLinInit. [dz_lin]
2013.11.30. Reimplemented dzLinFWrite and added dzLinFRead. [dz_lin]
2013.11.30. Added dzPexFRead, dzPexFWrite and dzPexFExpr. [dz_pex]
2013. 8. 6. Added step. [app]
2013. 8. 6. Reimplemented all functions. [dz_lag, dz_pid]
2013. 8. 6. Modified argument specifications. [dz_filt, dz_lag, dz_pid]
2011. 2.23. Reflected renamed functions around zComplex. [dz_pex, dz_fft]
2010.11. 8. Reflected renamed zVecArray and zMatArray to zVecBuf and zMatBuf, rspectively. [dz_lin]
2010. 7.30. Added quadratic PD class dzSysQPD. [dz_pid]