@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.1.1
+VERSION=1.1.2
 
-DEPENDENCY="zeda=1.2.1;zm=1.2.2"
+DEPENDENCY="zeda=1.2.4;zm=1.2.4"
